--- a/cmpalette/src/main/resources/override/tuning/passes/form/RkkResourceInternalForm.pal.xml
+++ b/cmpalette/src/main/resources/override/tuning/passes/form/RkkResourceInternalForm.pal.xml
@@ -91,13 +91,13 @@
                 <appearance importance="normal"/>
                 <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.category.hintPopUp:Тематика}</hint-pop-up>
               </field>
-              <field attribute-ref="date" name="${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.registration.date.name:Дата документа:}">
+              <field attribute-ref="date" name="${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.registration.date.name:Дата выдачи пропуска:}">
                 <appearance importance="normal"/>
-                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.registration.date.hintPopUp:Дата документа}</hint-pop-up>
+                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.registration.date.hintPopUp:Дата выдачи пропуска}</hint-pop-up>
               </field>
-              <field attribute-ref="forWho" name="${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.executor.name:Исполнители:}">
+              <field attribute-ref="forWho" name="${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.executor.name:ФИО получателя:}">
                 <appearance importance="normal"/>
-                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.executor.hintPopUp:Исполнители}</hint-pop-up>
+                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.executor.hintPopUp:ФИО получателя}</hint-pop-up>
                 <directories limit-livesearch="sys-current">
                   <directory-ref ref="CURRENT_SYS_HUMAN"/>
                   <directory-ref ref="CURRENT_SYS_HUMAN_Hierarchy"/>
@@ -105,9 +105,9 @@
                   <directory-ref ref="sys_roles"/>
                 </directories>
               </field>
-              <field attribute-ref="toWho" name="${ui.form.RkkResourcePassesForm.section.Attributes.section.Main.field.addressee.name:Адресаты:}">
+              <field attribute-ref="toWho" name="${ui.form.RkkResourcePassesForm.section.Attributes.section.Main.field.addressee.name:ФИО сотрудника:}">
                 <appearance importance="normal"/>
-                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.addressee.hintPopUp:Адресаты}</hint-pop-up>
+                <hint-pop-up>${ui.form.RkkResourceInternalForm.section.Attributes.section.Main.field.addressee.hintPopUp:ФИО сотрудника}</hint-pop-up>
                 <directories livesearch="true" limit-livesearch="sys-current">
                   <directory-ref ref="CURRENT_All"/>
                   <directory-ref ref="current_all_with_org_hier"/>
@@ -116,13 +116,13 @@
                   <directory-ref ref="FV_CURR_ALL"/>
                 </directories>
               </field>
-              <field attribute-ref="carNumber" name="${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carNumber.name:Номер машины}">
+              <field attribute-ref="carNumber" name="${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carNumber.name:Гос.номер:}">
                 <appearance importance="normal"/>
                 <hint-pop-up>${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carNumber.hint-pop-up:Тематика}</hint-pop-up>
               </field>
-              <field attribute-ref="carModel" name="${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carModel.name:Дата документа}">
+              <field attribute-ref="carModel" name="${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carModel.name:Марка автомобиля}">
                 <appearance importance="normal"/>
-                <hint-pop-up>${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carModel.hint-pop-up:Дата документа}</hint-pop-up>
+                <hint-pop-up>${ui.form.RkkResourcePassesForm.component.section.Attributes.component.section.Main.component.field.carModel.hint-pop-up:Марка автомобиля}</hint-pop-up>
               </field>
             </component>
           </section>
